k8s/juice-shop/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: juice-shop
  namespace: devsecops-lab
spec:
  selector:
    app: juice-shop
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
